--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "button-open-standalone-v1",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://wayzammit-collab.github.io/ButtonOpenStandaloneV1",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:pages": "BUILD_FOR_PAGES=1 vite build",
     "preview": "vite preview",
-    "predeploy": "rm -rf dist && vite build",
+    "predeploy": "rm -rf dist && BUILD_FOR_PAGES=1 vite build",
     "deploy": "gh-pages -d dist",
-    "pages:docs": "rm -rf docs && vite build && mkdir -p docs && cp -r dist/* docs/"
+    "pages:docs": "rm -rf docs && BUILD_FOR_PAGES=1 vite build && mkdir -p docs && cp -r dist/* docs/"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -19,6 +19,6 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.0",
     "gh-pages": "^6.1.1",
-    "vite": "^5.4.0"
+    "vite": "^7.1.7"
   }
 }
